Fix context incoherence

--- a/src/main/resources/messages/ChatGPTBundle_zh.properties
+++ b/src/main/resources/messages/ChatGPTBundle_zh.properties
@@ -8,9 +8,11 @@ action.settings=设置
 toolwindows.content.search=搜索
 
 notify.config.title=ChatGPT: 配置初始化
-notify.config.text=请设置 Access Token
-notify.response.title=ChatGPT: Token 已经过期
-notify.response.text=您所运行的URL源的令牌已过期
+notify.config.text=请先配置ChatGPT
+notify.common.error.title=ChatGPT: 请求服务器错误
+notify.common.error.text=Http 响应码: {0}, 响应信息: {1}
+notify.token_expired.error.title=ChatGPT: Token 已经过期
+notify.token_expired.error.text=您所运行的URL源的令牌已过期
 notify.timeout.error.title=ChatGPT: 网络读取超时
 notify.timeout.error.text=连接到远程服务器超时
 notify.too_many_request.error.title=ChatGPT: 请求太频繁
@@ -23,7 +25,7 @@ ui.setting.url.default.label=默认
 ui.setting.url.default.remark=国内用户直接选择此项
 ui.setting.url.official.label=官方源
 ui.setting.url.official.remark=这个选项是使用官方网址。
-ui.setting.url.official.token.label=Access token:
+ui.setting.url.official.token.label=访问令牌:
 ui.setting.url.official.token.empty_text=登录到 Open AI, 访问 https://chat.openai.com/api/auth/session
 ui.setting.url.customize.label=自定义
 ui.setting.url.customize.remark=如果您有自己的后端服务器，您可以在这里填写您的API地址。
@@ -33,8 +35,10 @@ ui.setting.url.cloudflare.label=Cloudflare
 ui.setting.url.cloudflare.remark=使用 Cloudflare 服务。
 ui.setting.url.cloudflare.url.label=服务器地址:
 ui.setting.url.cloudflare.url.empty_text=设置 Cloudflare Workers 域
-ui.setting.connection.title=连接 Settings
-ui.setting.connection.read_timeout.label=读取超时 (ms):
+ui.setting.connection.title=网络连接设置
+ui.setting.connection.read_timeout.label=读取超时 (毫秒):
+ui.setting.connection.read_timeout.remark=表示从服务器读数据的等待时间。
 ui.setting.connection.read_timeout.empty_text=默认10秒
-ui.setting.connection.connection_timeout.label=连接超时 (ms):
+ui.setting.connection.connection_timeout.label=连接超时 (毫秒):
+ui.setting.connection.connection_timeout.remark=表示与服务器建立连接的等待时间。
 ui.setting.connection.connection_timeout.empty_text=默认10秒
