Add actions of editor

--- a/src/main/resources/messages/ChatGPTBundle_zh.properties
+++ b/src/main/resources/messages/ChatGPTBundle_zh.properties
@@ -5,6 +5,14 @@ action.refresh.automatic.text=自动设置
 action.refresh=重置线程
 action.settings=设置
 action.open_online_chatgpt=打开在线ChatGPT
+action.code.optimize.menu=Optimize code
+action.code.optimize.text=优化代码
+action.code.test.menu=添加测试用例
+action.code.test.text=为下面这段代码添加测试用例：\n{0}
+action.code.wrong.menu=找出问题
+action.code.wrong.text=代码为什么有问题？\n{0}
+action.code.explain.menu=解释代码
+action.code.explain.text=解释这部分代码：\n{0}
 
 toolwindows.content.search=搜索
 toolwindows.content.online=在线ChatGPT
